--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
+# package directories
 node_modules
-build
-dist
-*.swp
+jspm_packages
+
+# Serverless directories
+.serverless
+
+# Webpack directories
+.webpack
