--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
   "author": "Adriano Terruel <adrianopons@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "node-fetch": "^2.6.1",
     "pg": "^8.3.3",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.2.0"
+    "jest": "^26.4.2",
+    "sequelize-cli": "^6.2.0",
+    "sqlite3": "^5.0.0"
+  },
+  "scripts": {
+    "pretest": "SET NODE_ENV=test && sequelize db:migrate",
+    "test": "SET NODE_ENV=test && jest",
+    "posttest": "SET NODE_ENV=test && sequelize db:undo:all"
   }
 }
