--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --no-cache",
+    "test:cov": "npm run test -- --coverage",
     "start": "sls offline",
     "deploy": "sls deploy",
     "deploy:prod": "sls deploy --stage prod"
@@ -15,14 +16,20 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
+    "@types/jest": "^25.1.2",
     "@types/node": "^10.12.18",
     "@types/serverless": "^1.72.5",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
+    "jest": "^26.4.2",
+    "jest-mock-console": "^1.0.1",
+    "jest-mock-extended": "^1.0.10",
     "serverless-offline": "^6.7.0",
     "serverless-webpack": "^5.2.0",
+    "ts-jest": "^25.2.0",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.10.2",
     "typescript": "^3.2.4",
+    "undefined": "^0.1.0",
     "webpack": "^4.29.0",
     "webpack-node-externals": "^1.7.2"
   },
