--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest --no-cache",
     "test:cov": "npm run test -- --coverage",
+    "lint": "tslint",
     "start": "sls offline",
     "deploy": "sls deploy",
     "deploy:prod": "sls deploy --stage prod"
@@ -19,6 +20,9 @@
     "@types/jest": "^25.1.2",
     "@types/node": "^10.12.18",
     "@types/serverless": "^1.72.5",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "eslint": "^7.9.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.4.2",
     "jest-mock-console": "^1.0.1",
@@ -28,7 +32,10 @@
     "ts-jest": "^25.2.0",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.10.2",
-    "typescript": "^3.2.4",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0",
+    "typescript": "^3.9.7",
     "undefined": "^0.1.0",
     "webpack": "^4.29.0",
     "webpack-node-externals": "^1.7.2"
