--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
     "plugins": ["@typescript-eslint"],
     "rules": {
       "semi": ["error", "never"],
-      "quotes": [2, "single"]
+      "quotes": [2, "single"],
+      "eol-last": ["error", "always"]
     }
 }
